# say828-claude-market

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  test-server.ts  tsconfig.json
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.claude-plugin/commands/: orchestrator.md
.github/workflows/: release.yml
apps/hook/: package.json  tsconfig.json
apps/hook/.claude-plugin/: plugin.json
apps/orchestrator/: package.json
autonomous-decision-loop/: .gitignore  README.md  install.sh  pyproject.toml
autonomous-decision-loop/.claude-plugin/: marketplace.json
autonomous-decision-loop/docs/: architecture.md
autonomous-decision-loop/plugins/autonomous-decision-loop/: CLAUDE.md
autonomous-decision-loop/plugins/autonomous-decision-loop/.claude-plugin/: commands.json  plugin.json
autonomous-decision-loop/plugins/autonomous-decision-loop/hooks/: hooks.json  stop_hook.py
autonomous-decision-loop/plugins/autonomous-decision-loop/scripts/: adl_doctor.sh  claude_stop_hook.py
autonomous-decision-loop/runtime/: codex_notify.py
autonomous-decision-loop/scripts/: doctor.py  install.py  install.sh
autonomous-decision-loop/src/adl/: __init__.py  claude.py  claude_stop_hook.py  codex_notify.py  core.py  engine.py  install.py  state.py
autonomous-decision-loop/tests/: test_claude.py  test_core.py  test_engine.py  test_state.py
docs/: REQUIREMENTS.md
docs/plans/: 2026-03-07-codex-skill-market-bootstrap.md  2026-03-08-say828-agent-market-adl-integration.md
plugins/ship/: README.md
scripts/: doctor_adl.py  install.sh  install_adl.py
(+42 files in other folders)
