[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-decision-loop"
version = "0.1.0"
description = "Response-conditioned autonomous decision loop for Claude Code and Codex"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
